k8s-main-object/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
        - name: nginx-storage
          mountPath: /usr/share/nginx/html
  volumes:
    - name: nginx-config
      configMap:
        name: nginx-config
    - name: nginx-storage
      persistentVolumeClaim:
        claimName: nginx-pvc
  nodeName: k8s-node01
