k8s-main-object/demo-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: IngressClass 
metadata: 
  labels: 
    app.kubernetes.io/component: controller 
  name: nginx-example   
  annotations: 
    ingressclass.kubernetes.io/is-default-class: "true"
spec: 
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths: 
      - path: /hello
        pathType: Prefix 
        backend: 
          service: 
            name: nginx-service 
            port: 
              number: 80
